<resources>
    <string name="app_name">AccountsBook</string>

    <string name="navigation_title_account">帳戶</string>
    <string name="navigation_title_budget">預算</string>
    <string name="navigation_title_home">紀錄</string>
    <string name="navigation_title_statistic">統計</string>
    <string name="navigation_title_setting">設定</string>

    <string name="menu_add_record">新增紀錄</string>
    <string name="menu_edit_category">編輯分類</string>
    <string name="menu_delete_category">刪除分類</string>
    <string name="menu_add_category">新增分類</string>

    <string name="record_form_type">收支</string>
    <string name="record_form_type_income">收入</string>
    <string name="record_form_type_outcome">支出</string>
    <string name="record_form_amount">金額</string>
    <string name="record_form_amount_input_hint">金額</string>
    <string name="record_form_description">備註</string>
    <string name="record_form_category">分類</string>
    <string name="record_form_description_input_hint">請輸入</string>
</resources>
