<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="56dp"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <ImageView
        android:id="@+id/iv_list_item_receipt_type_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/record_form_type"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_list_item_receipt_type_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_list_item_receipt_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:checkedChip="@id/type_outcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/type_income"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_form_type_income"
            android:textColor="@color/receipt_type_chip_text_color"
            android:textSize="14sp"
            app:chipBackgroundColor="@color/receipt_type_chip_bg_color"
            app:chipCornerRadius="12dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/type_outcome"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_form_type_outcome"
            android:textColor="@color/receipt_type_chip_text_color"
            android:textSize="14sp"
            app:chipBackgroundColor="@color/receipt_type_chip_bg_color"
            app:chipCornerRadius="12dp" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
